# OpenEdge

./: .gitignore  FIXES_APPLIED.md  OPENCV_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_OPENCV_SETUP.md  local.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/openedge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_detection.cpp  native-lib.cpp
app/src/main/cpp/processor/: FrameProcessor.cpp  FrameProcessor.h
app/src/main/cpp/renderer/: GLRenderer.cpp  GLRenderer.h
app/src/main/cpp/utils/: YUVConverter.cpp  YUVConverter.h
app/src/main/java/com/example/openedge/: MainActivity.kt  NativeBridge.kt  WebViewActivity.kt
app/src/main/java/com/example/openedge/renderer/: CameraGLRenderer.kt
app/src/main/java/com/openedge/: MainActivity.kt
app/src/main/java/com/openedge/camera/: CameraManager.kt
app/src/main/java/com/openedge/gl/: CameraRenderer.kt
app/src/main/java/com/openedge/processing/: EdgeDetection.kt
app/src/main/res/drawable/: bottom_panel_bg.xml  bottom_panel_blue.xml  button_capture.xml  button_edges.xml  button_gray.xml  button_raw.xml  button_toggle.xml  mode_badge_bg.xml  mode_badge_blue.xml  top_bar_gradient.xml
app/src/main/res/layout/: activity_main.xml  activity_webview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/openedge/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
screenshots/: README.md
web/: .gitignore  README.md  index.html  package-lock.json  package.json  styles.css  tsconfig.json
web/public/: index.html  styles.css
web/src/: index.ts  main.ts  viewer.ts
